--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "displayName": "subconscious",
   "description": "",
   "version": "0.0.1",
+  "repository": {
+    "url": "https://github.com/leopontes/subconscious.git"
+  },
   "engines": {
     "vscode": "^1.76.0"
   },
